welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: not found: value getColorSol
  if (getColorSol()==green) {bool1=true}
      ^SlugTracking:5: error: not found: value green
  if (getColorSol()==green) {bool1=true}
                     ^