welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var bool1=false
  avance();
  if (getColorSol()==green) {bool1=true}
  else {bool1=false}
  recule()
  return bool1
}